--- a/SpeakersService/Views/Shared/_Layout.cshtml
+++ b/SpeakersService/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Загрузить новый аудиофайл</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
@@ -44,6 +44,7 @@
             @RenderBody()
             <hr />
             <footer>
+                
                 <p>&copy; 2019 - SpeakersService</p>
             </footer>
         </div>
