--- a/SpeakersService/wwwroot/css/site.css
+++ b/SpeakersService/wwwroot/css/site.css
@@ -28,10 +28,15 @@ body {
     margin: 15px;
 }
 
+
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
     .carousel-caption {
         display: none;
     }
+}
+
+.label__input:focus {
+    outline: none;
 }
