--- a/SpeakersService/Views/Home/Index.cshtml
+++ b/SpeakersService/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SpeakersService.Models.SpeakerViewModel>
+﻿@model IEnumerable<Models.SpeakerViewModel>
 @{
     ViewData["Title"] = "Результаты";
 }
