--- a/SpeakersService/Views/Home/Upload.cshtml
+++ b/SpeakersService/Views/Home/Upload.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SpeakersService.Models.SpeakerViewModel>
+﻿@model IEnumerable<Models.SpeakerViewModel>
 @{
     ViewData["Title"] = "Добавление файла";
 }
@@ -9,7 +9,7 @@
     <div class="input-group">
         <label class="input-group-btn">
             <span style="margin-bottom:10px; display: block; width: 200px; border-radius: 5px; padding: 5px; text-align:center; background-color: #fff; border: 2px solid #000; color: #000;" class="btn btn-primary">
-                Выбрать файл<input type="file" name="uploadedFile" id="uploadedFile" style="display: none;" multiple>
+                Выбрать файл<input type="file" name="uploadedFile" id="uploadedFile" stySpeakersServicesplay: none;" multiple>
             </span>
         </label>
         <input style="border: 0; background-color: #fff; box-shadow: none;" type="text" class="form-control" readonly>
