--- a/SpeakersService/Views/Home/Index.cshtml
+++ b/SpeakersService/Views/Home/Index.cshtml
@@ -1,30 +1,11 @@
-﻿@model IEnumerable<Models.SpeakerViewModel>
+﻿@model double[]
 @{
     ViewData["Title"] = "Результаты";
 }
 
-<h1>Выберите диктора</h1>
-@foreach (var f in Model)
-{
-    <br />
-    <a href="@(Context.Request.Path + "?speakerName=" + f.Name)">@Url.Content(f.Name)</a>
-}
-
 @{
-    if (Context.Request.Query["speakerName"].Count != 0)
-    {
-        <h2>Результаты для @(Context.Request.Query["speakerName"][0])</h2>
-        var speakerName = Context.Request.Query["speakerName"][0];
-
-        var speaker = Model.First(f => f.Name == speakerName);
-
-        foreach (var noiseAndW in speaker.W)
+        foreach (var l in Model)
         {
-            <h3>Разборчивость для вида шума "@(noiseAndW.Key)": </h3>
-            foreach (var w in noiseAndW.Value)
-            {
-                <p>@(w)</p>
-            }
+                <p>@(l)</p>
         }
-    }
 }
