--- a/SpeakersService/Views/Home/Upload.cshtml
+++ b/SpeakersService/Views/Home/Upload.cshtml
@@ -24,8 +24,30 @@
     <input type="submit" value="Загрузить" style="display: block; width: 200px; border-radius: 5px; padding: 5px; text-align:center; background-color: #fff; border: 2px solid #000; color: #000;" />
 </form>-->
 
-<h3>Все файлы:</h3>
-@foreach (var f in Model)
+@using (Html.BeginForm("GetNoiseLevels", "Home", FormMethod.Post))
 {
-    <p>"@Url.Content(f.Path)"</p>
+
+    <h3>Выберите дикторов для рассчета уровней шума:</h3>
+    @foreach (var f in Model)
+    {
+        <br />
+        <input name="selectedSpeakers" value="@f.Name" type="checkbox" /> <span>@f.Name</span>
+    }
+
+    <h3>Разборчивость, которую нужно обеспечить:</h3>
+
+    @Html.RadioButton("w", 0.6)
+    <span>0.6 (невозможно составить справку о подробном содержании разговора)</span> <br />
+
+    @Html.RadioButton("w", 0.4)
+    <span>0.4 (невозможно составить краткую справку )</span> <br />
+
+    @Html.RadioButton("w", 0.3)
+    <span>0.3 (предмет разговора трудно понять)</span> <br />
+
+    @Html.RadioButton("w", 0.1)
+    <span>0.1 (непонятно есть ли разговор)</span> <br />
+
+    <br />
+    <input type="submit" value="Рассчитать" style="display: block; width: 200px; border-radius: 5px; padding: 5px; text-align:center; background-color: #fff; border: 2px solid #000; color: #000;" />
 }
