--- a/SpeakersService/Views/Home/Index.cshtml
+++ b/SpeakersService/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Результаты";
 }
 
+<h3>Интегральные уровни помехи по октавным полосам:</h3>
 @{
         foreach (var l in Model)
         {
